<resources>
    <string name="app_name">Al-Mira</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your password</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add">Add</string>
    <string name="see_all">See All</string>
    <string name="view_all">View all</string>

    <string name="code">Code</string>
    <string name="colors">Colors</string>
    <string name="size">Size</string>
    <string name="material">Material</string>
    <string name="price">Price</string>
    <string name="details">Details</string>
    <string name="code_">Code:</string>
    <string name="colors_">Colors:</string>
    <string name="size_">Size:</string>
    <string name="material_">Material:</string>
    <string name="price_">Price:</string>
    <string name="details_">Details:</string>
    <string name="choose_color">Choose color</string>
    <string name="choose_size">Choose size</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="color">Color</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total">Total</string>
    <string name="confirm_message">شكراً لشرائك من آل ميرا.\n سيتم التواصل معك في خلال يومين لتأكيد طلبك.</string>
    <string name="your_data">Your Data</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="address">Detailed address</string>
    <string name="order">Order</string>
    <string name="products">Products</string>
</resources>